--- a/app/src/main/res/layout/activity_detail_register.xml
+++ b/app/src/main/res/layout/activity_detail_register.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="20dp">
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -23,14 +23,17 @@
             android:id="@+id/detail_product_id"
             android:layout_width="0dp"
             android:layout_weight="2.5"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:singleLine="true"
+            android:padding="5dp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="10dp">
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -41,14 +44,17 @@
             android:id="@+id/detail_product_name"
             android:layout_width="0dp"
             android:layout_weight="2.5"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:singleLine="true"
+            android:padding="5dp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="10dp">
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -59,14 +65,17 @@
             android:id="@+id/detail_brand"
             android:layout_width="0dp"
             android:layout_weight="2.5"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:singleLine="true"
+            android:padding="5dp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="10dp">
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -77,13 +86,18 @@
             android:id="@+id/detail_vendor"
             android:layout_width="0dp"
             android:layout_weight="2.5"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:singleLine="true"
+            android:padding="5dp"/>
     </LinearLayout>
+
     <Button
         android:id="@+id/detail_btn_register"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="25dp"
-        android:text="register"/>
+        android:text="Register"
+        android:textAllCaps="false"/>
 </LinearLayout>
