--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context=".LoginActivity"
+    tools:context=".activity.LoginActivity"
     android:layout_marginTop="150sp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
