--- a/app/src/main/res/layout/activity_qrcode_scanner.xml
+++ b/app/src/main/res/layout/activity_qrcode_scanner.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QRCodeScannerActivity">
+    tools:context=".activity.QRCodeScannerActivity">
     <SurfaceView
         android:id="@+id/qr_scanner_surface"
         android:layout_width="350sp"
