--- a/app/src/main/res/layout-v26/activity_login.xml
+++ b/app/src/main/res/layout-v26/activity_login.xml
@@ -1,5 +1,5 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
+    android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/background_color"
     android:padding="20dp">
@@ -23,7 +23,7 @@
                 android:layout_height="123dp"
                 android:layout_gravity="center"
                 android:src="@mipmap/logo"
-                android:contentDescription="@string/todo" />
+                android:contentDescription="TODO" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -78,7 +78,7 @@
                 android:textColorHint="@color/white"
                 android:textSize="16sp"
                 android:autofillHints=""
-                android:drawableStart="@drawable/ic_lock" tools:targetApi="o" />
+                android:drawableStart="@drawable/ic_lock" />
 
             <Button
                 android:id="@+id/loginBtn"
