--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,11 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="id.io.barcodescanner.main.activity.SplashActivity">
+    tools:context="id.io.barcodescanner.main.activity.SplashActivity"
+    android:background="@color/background_color">
 
     <ImageView
-        android:layout_width="150sp"
-        android:layout_height="150sp"
-        android:src="@drawable/ic_android"
+        android:id="@+id/logo"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/logo"
         android:layout_centerInParent="true"/>
 </RelativeLayout>
