--- a/app/src/main/res/layout/activity_detail_register.xml
+++ b/app/src/main/res/layout/activity_detail_register.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:text="Asset Code"
             android:textStyle="bold"/>
-        <EditText
+        <TextView
             android:id="@+id/detail_assetCode"
             android:layout_width="0dp"
             android:layout_weight="2.5"
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:text="Asset Name"
             android:textStyle="bold"/>
-        <EditText
+        <TextView
             android:id="@+id/detail_assetName"
             android:layout_width="0dp"
             android:layout_weight="2.5"
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:text="Asset Type"
             android:textStyle="bold"/>
-        <EditText
+        <TextView
             android:id="@+id/detail_assetType"
             android:layout_width="0dp"
             android:layout_weight="2.5"
@@ -92,7 +92,7 @@
             android:layout_height="wrap_content"
             android:text="Manufacture"
             android:textStyle="bold"/>
-        <EditText
+        <TextView
             android:id="@+id/detail_manufacture"
             android:layout_width="0dp"
             android:layout_weight="2.5"
@@ -113,7 +113,7 @@
             android:layout_height="wrap_content"
             android:text="Model"
             android:textStyle="bold"/>
-        <EditText
+        <TextView
             android:id="@+id/detail_model"
             android:layout_width="0dp"
             android:layout_weight="2.5"
@@ -134,7 +134,7 @@
             android:layout_height="wrap_content"
             android:text="Vendor"
             android:textStyle="bold"/>
-        <EditText
+        <TextView
             android:id="@+id/detail_vendor"
             android:layout_width="0dp"
             android:layout_weight="2.5"
@@ -155,7 +155,7 @@
             android:layout_height="wrap_content"
             android:text="Note"
             android:textStyle="bold"/>
-        <EditText
+        <TextView
             android:id="@+id/detail_note"
             android:layout_width="0dp"
             android:layout_weight="2.5"
@@ -176,7 +176,7 @@
             android:layout_height="wrap_content"
             android:text="Created Date"
             android:textStyle="bold"/>
-        <EditText
+        <TextView
             android:id="@+id/detail_createdDate"
             android:layout_width="0dp"
             android:layout_weight="2.5"
